--- a/src/main/resources/crud/serviceImpl.java.vm
+++ b/src/main/resources/crud/serviceImpl.java.vm
@@ -30,8 +30,10 @@ import java.util.List;
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import ${basePackage}.${DTOPackage}.${entity}SelectDTO;
-import ${basePackage}.${VOPackage}.${entity}VO;
 import java.io.Serializable;
+#end
+#if(${generateSelect}||${generateInsert})
+import ${basePackage}.${VOPackage}.${entity}VO;
 #end
 
 /**
