--- a/src/main/resources/parent/entityInsertDTO.java.vm
+++ b/src/main/resources/parent/entityInsertDTO.java.vm
@@ -111,7 +111,7 @@ public class ${entity}InsertDTO {
     }
 
   #if(${chainModel})
-    public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+    public ${entity}InsertDTO set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
   #else
     public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
   #end
