--- a/src/main/resources/parent/entitySelectDTO.java.vm
+++ b/src/main/resources/parent/entitySelectDTO.java.vm
@@ -129,7 +129,7 @@ public class ${entity}SelectDTO {
     #end
     private ${field.propertyType} ${field.propertyName}End;
 ## int类型长度小于3时追加in查询
-#elseif(${field.propertyType} == "Integer")
+#elseif(${field.propertyType} == "Integer"||${field.propertyType}=="Long")
 
     #if(${springdoc})
     @Schema(description = "${field.comment}批量查询")
@@ -238,7 +238,7 @@ public class ${entity}SelectDTO {
     #end
     }
 
-    #elseif(${field.propertyType} == "Integer")
+    #elseif(${field.propertyType} == "Integer"|| ${field.propertyType} == "Long")
 ##  int批量查询getter and setter
     public List<${field.propertyType}> ${getprefix}${field.capitalName}List() {
         return ${field.propertyName}List;
