--- a/src/main/resources/parent/mapper.xml.vm
+++ b/src/main/resources/parent/mapper.xml.vm
@@ -101,7 +101,7 @@
             <if test="map.${field.propertyName}End!=null">
                 and a.${field.columnName} &lt;= ${shift3}${shiftLeft}map.${field.propertyName}End${shiftRight}
             </if>
-        #elseif(${field.propertyType} == "Integer")
+        #elseif(${field.propertyType} == "Integer"||${field.propertyType} == "Long")
             <if test="map.${field.propertyName}!=null">
                 and a.${field.columnName} = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
             </if>
