--- a/src/main/resources/parent/mapper.xml.vm
+++ b/src/main/resources/parent/mapper.xml.vm
@@ -63,21 +63,26 @@
         a.${shift8}
         from
 ##         ${schemaName} ${table.name} a
-        ${table.name} a
+        `${table.name}` a
         <where>
+#foreach($field in ${table.fields})
+    #if(${field.logicDeleteField})
+        and a.`${field.columnName}` = 0
+    #end
+#end
         <if test="map!=null">
 #foreach($field in ${table.fields})
     #if(${field.logicDeleteField})
-                and a.${field.columnName} = 0
+#                 and a.${field.columnName} = 0
     #elseif(${field.keyFlag})
             <if test="map.primaryKey!=null">
-                and a.${field.columnName} = ${shift3}${shiftLeft}map.primaryKey${shiftRight}
+                and a.`${field.columnName}` = ${shift3}${shiftLeft}map.primaryKey${shiftRight}
             </if>
             <if test="map.${field.propertyName}!=null">
-                and a.${field.columnName} = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
+                and a.`${field.columnName}` = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
             </if>
             <if test="map.${field.propertyName}List!=null and map.${field.propertyName}List.size()>0">
-                and a.${field.columnName} in
+                and a.`${field.columnName}` in
                 <foreach collection="map.${field.propertyName}List" item="prop" open="(" close=")" separator=",">
                     ${shift3}${shiftLeft}prop${shiftRight}
                 </foreach>
@@ -86,34 +91,34 @@
     #else
         #if(${field.propertyType} == "String")
             <if test="map.${field.propertyName}!=null and map.${field.propertyName}.length()>0">
-                and a.${field.columnName} = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
+                and a.`${field.columnName}` = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
             </if>
             <if test="map.${field.propertyName}Like !=null and map.${field.propertyName}Like.length()>0">
-                and a.${field.columnName} like concat('${shift5}',${shift3}${shiftLeft}map.${field.propertyName}Like${shiftRight},'${shift5}')
+                and a.`${field.columnName}` like concat('${shift5}',${shift3}${shiftLeft}map.${field.propertyName}Like${shiftRight},'${shift5}')
             </if>
         #elseif($jdbcTimeTypes.contains(${field.metaInfo.jdbcType}))
             <if test="map.${field.propertyName}!=null">
-                and a.${field.columnName} = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
+                and a.`${field.columnName}` = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
             </if>
             <if test="map.${field.propertyName}Start!=null">
-                and a.${field.columnName} &gt;= ${shift3}${shiftLeft}map.${field.propertyName}Start${shiftRight}
+                and a.`${field.columnName}` &gt;= ${shift3}${shiftLeft}map.${field.propertyName}Start${shiftRight}
             </if>
             <if test="map.${field.propertyName}End!=null">
-                and a.${field.columnName} &lt;= ${shift3}${shiftLeft}map.${field.propertyName}End${shiftRight}
+                and a.`${field.columnName}` &lt;= ${shift3}${shiftLeft}map.${field.propertyName}End${shiftRight}
             </if>
         #elseif(${field.propertyType} == "Integer"||${field.propertyType} == "Long")
             <if test="map.${field.propertyName}!=null">
-                and a.${field.columnName} = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
+                and a.`${field.columnName}` = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
             </if>
             <if test="map.${field.propertyName}List!=null and map.${field.propertyName}List.size()>0">
-                and a.${field.columnName} in
+                and a.`${field.columnName}` in
                 <foreach collection="map.${field.propertyName}List" item="prop" open="(" close=")" separator=",">
                     ${shift3}${shiftLeft}prop${shiftRight}
                 </foreach>
             </if>
         #else
             <if test="map.${field.propertyName}!=null">
-                and a.${field.columnName} = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
+                and a.`${field.columnName}` = ${shift3}${shiftLeft}map.${field.propertyName}${shiftRight}
             </if>
         #end
     #end
